<resources>
    <string name="app_name">Lab 2.1 Loan Calculator</string>
    <string name="price">Price</string>
    <string name="down_payment">Down payment</string>
    <string name="interest">Interest rate (%)</string>
    <string name="repayment">Repayment period (month)</string>
    <string name="salary">Salary</string>
    <string name="calculate">Calculate</string>
    <string name="close">Close</string>
    <string name="monthly_repayment">Monthly repayment</string>
    <string name="status">Loan status:</string>
</resources>
